Added new features + memoty
